--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        
 <link rel="stylesheet" href="ecommerce.css">
    
-    <title>nouvil page par js et css</title>
+    <title>nouvil page par js - css</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="utf-8"/>
     <script>
